# dotfiles

backup/: opengl.lua
config/: CMakeLists.txt  rofi.bak
config/alacritty/: alacritty.toml
config/autorandr/: monitor-setup.sh
config/autorandr/my-setup/: config  setup
config/awesome/: rc.lua
config/awesome/keybinds/: bindtotags.lua  clientbuttons.lua  clientkeys.lua  globalbuttons.lua  globalkeys.lua
config/awesome/themes/: theme.lua
config/dunst/: dunstrc
config/i3/: config
config/my-setup/: config  setup
config/neofetch/: ascii_1  ascii_2  ascii_3  ascii_4
config/nvim/: lazy-lock.json
config/nvim.astro/: lazy-lock.json
config/nvim.astro/lua/: community.lua
config/nvim.astro/lua/plugins/: astrocore.lua  astrolsp.lua  blink.lua  code_runner.lua  java.lua  mason.lua  neo-tree.lua  nvim-lint.lua  telescope.lua  themes.lua  which-key.lua
config/nvim.kickstart/: init.lua  init.lua.copy  lazy-lock.json
config/nvim/lua/: community.lua
config/nvim/lua/plugins/: astrocore.lua  astrolsp.lua  blink.lua  code_runner.lua  mason.lua  neo-tree.lua  neogit.lua  telescope.lua  themes.lua
config/picom/: picom.conf
config/polybar/: config.ini  cpu-stats-window.sh  launch.sh
config/rofi/: config.rasi
config/rofi/launchers/type-7/: style-1.rasi
config/rofi/themes/: launcher.sh  style-1.rasi
config/sddm/: Xsetup  sddm.conf
config/starship/: starship.toml
config/testdir/: testlink
config/wezterm/: wezterm.lua
config/zsh/: .zshrc
